CSS cleanup, on to better things

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -108,7 +108,10 @@ div#page {
 	font-weight: bold;
 }
 
-.list .right-info {
-	text-align: center;
-	display: inline;
+.list .subscriber-count {
+
+}
+
+.list .topics {
+	
 }
