--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,13 +1,12 @@
 <% div_for list do %>
 	<p>
 		<span class="name"><%= link_to h(list.name), list %></span>
-		<span class="right-info">
+		<span class="subscriber-count">
 			<% if current_user.admin? %>
 				(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 			<% end %>
-			
-			<%= link_to 'view topics', list_topics_path(list)  %>
-			
+		</span>
+		<span class="topics"><%= link_to 'view topics', list_topics_path(list) %></span>
 			<% unless current_user.admin? %>
 				<%= link_to h("[unsubscribe]"), unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
 			<% end %>
