Add pagination and ajax search to subscribers page, add focus field across a bunch of pages so the first field auto-focuses

--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,14 +1,11 @@
-<h1>All Subscribers</h1>
+<%= render :partial => 'search' %>
 
-<table>
-	<tr>
-		<th>Name</th>
-		<th>Email</th>
-		<th>Admin</th>
-	</tr>
-	<%= render :partial => @subscribers %>
+<table class="subscribers">
+	<tbody id="subscribers">
+		<%= render :partial => @subscribers %>
+	</tbody>
 </table>
 
-<br />
+<%= will_paginate @subscribers %>
+<%= focus_field "term" %>
 
-<%= link_to 'New subscriber', new_subscriber_path %>
