--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 		  <p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %> | 
           <%= link_to "Messages", messages_path %> | <%= link_to "Servers", servers_path %></p>
         <% else %>
-		  <p><%= link_to "My Lists", lists_path %> | <%= link_to "My Account", edit_subscriber_path(current_user) %> </p>
+		  <p><%= link_to "My Lists", lists_path %> | <%= link_to "Available Lists", available_lists_path %> | <%= link_to "My Account", edit_subscriber_path(current_user) %> </p>
         <% end %>
       </div>
 	</div>
