--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -7,8 +7,10 @@
 			<% end %>
 		</span>
 		<span class="topics"><%= link_to 'view topics', list_topics_path(list) %></span>
-			<% unless current_user.admin? %>
-				<%= link_to h("[unsubscribe]"), unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
+			<% if current_user.lists.include?(@list) %>
+				<%= link_to "[unsubscribe]", unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
+			<% else %>
+				<%= link_to "[subscribe]" %>
 			<% end %>
 		</span>
 	</p>
