--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,3 +1,4 @@
+<p class="top-right-links"><%= link_to 'Add a new subscriber', new_subscriber_path %></p>
 <%= render :partial => 'search' %>
 <br />
 <table class="subscribers">
