--- a/app/views/servers/index.html.erb
+++ b/app/views/servers/index.html.erb
@@ -1,7 +1,6 @@
+<p class="top-right-links"><%= link_to 'Add a new server', new_server_path %></p>
 <h2>Authorized Email Servers</h2>
 <p>Servers listed here can push email to all mailing lists.</p>
 
 <%= render :partial => @servers %>
 
-<br />
-<%= link_to "Add a new server", new_server_path %>
