--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -112,6 +112,11 @@ div#page {
 	margin-bottom: 15px;
 }
 
+.top-right-links {
+	float: right;
+	font-size: 14px;
+}
+
 .list {
 	background: #f2f2f2;
 	border: 1px solid #d2d2d2;
