Distinguish between public/private lists, change style of list index to fit the lock icon and the list's email address, give H2's at the top of all the pages some room to breathe

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -22,6 +22,7 @@ h1 {
 
 h2 {
 	font-size: 16px;
+	margin-bottom: 10px;
 }
 
 h3 {
@@ -161,12 +162,18 @@ div#page {
 	font-weight: bold;
 }
 
-.list .subscriber-count {
 
+.list .sub-text a {
+	color: red;
 }
 
-.list .topics {
-	
+.list .sub-text a:hover {
+	background: red;
+	color: #fff;
+}
+
+.list .private {
+	float: right;
 }
 
 table.subscribers {
