--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,21 +1,24 @@
 <% div_for list do %>
 	<p>
+		<% if list.private? %>
+			<span class="private"><%= image_tag 'private.png', :alt => 'This list is private' %></span>
+		<% end %>
 		<span class="name"><%= link_to h(list.name), list %></span>
-		<span class="subscriber-count">
+		<span class="email"><%= mail_to h(list.email) %></span>
+	</p>
+	<p>
+		<span class="sub-text">
 			<% if current_user.admin? %>
 				(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 			<% end %>
-		</span>
-		<span class="topics">
-            <%= link_to 'view topics', list_topics_path(list) %></span>
-		</span>
-        <p class="top-right-list">
+		<span class="sub-text">         
 			<% if current_user.lists.include?(list) %>
-				<%= link_to "[unsubscribe]", unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
+				<%= link_to "unsubscribe", unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
 			<% else %>
-				<%= link_to "[subscribe]", subscribe_list_path(list), :confirm => "Are you sure you want to subscribe?" %>
+				<%= link_to "subscribe", subscribe_list_path(list), :confirm => "Are you sure you want to subscribe?" %>
 			<% end %>
-        </p>
+			<%= link_to 'view topics', list_topics_path(list) %>
+		</span>
 	</p>
 	<p><%=h list.description %></p>
 <% end %>
