Add footer with quoted sample yml file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,15 @@
 	</div>
 	
 </div>
+
+<!-- Footer -->
+<div id="footer" align="center">
+   <br/>
+   <div id="footer-links"><%= APP_CONFIG[:copyright] %></div>
+</div>
+<!-- End Footer -->
+
+
 	
 </body>
 </html>
