--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,20 +1,5 @@
-<h3><%= @topic.name %></h3>
-<p><%= link_to h("[all topics]"), list_topics_path(@list) %>
+<h3><%=h @topic.name %></h3>
+<p><%= link_to "[all topics]", list_topics_path(@list) %></p>
 <%= will_paginate @messages %>
-<% @messages.each do |message| %>
-<div class="message" style="border: 1px solid #999; margin: 5px;">
-  <div class="message-header" style="position: relative; height: 1.1em;">
-    <div class="message-header-left" style="position: absolute; left: 5px;">
-      <p><b><%= message.author.name %></b> &lt;<%= message.author.email %>&gt;</p>
-    </div>
-    <div class="message-header-right" style="position: absolute; right: 5px;">
-   	  <p><b><%= message.created_at.getlocal.strftime('%b %d %Y, %I:%M %p') %></b></p>
-	</div>
-  </div>
-  <div class="message-body">
-     <pre WRAP><%= message.body_clean %></pre>
-  </div>
-  <%= link_to( h("Full message"), message ) %>
-</div>
-<% end %>
+<%= render :partial => @messages %>
 <%= will_paginate @messages %>
