--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -55,6 +55,13 @@ th {
     background: #fff;
 }
 
+.big-field {
+	font-size: 16px;
+	width: 40%;
+	font-weight: bold;
+	color: #111;
+}
+
 
 div#header {
 	height: 40px;
