--- a/app/views/subscribers/_search.html.erb
+++ b/app/views/subscribers/_search.html.erb
@@ -1,6 +1,6 @@
 <div class="search">
 	<h2>Find a subscriber</h2>
-	<%= text_field_tag :term, {}, :size => 40, :class => "search-field" %>
+	<%= text_field_tag :term, {}, :class => "big-field" %>
 	<span id="live_search_spinner" style="display:none">
 		<%= image_tag "spinner3.gif"%>
 	</span>
