Consistency - redo migration

--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -9,8 +9,8 @@
 	</p>
 	
 	<p>
-		<%= f.check_box :disable_archive, :disabled => true %>
-		<%= f.label :disable_archive, 'Disable the ability to view the message archive' %>
+		<%= f.check_box :archive_disabled, :disabled => true %>
+		<%= f.label :archive_disabled, 'Disable the ability to view the message archive' %>
 	</p>
 	
 	<p>
