Add some cool Rails 2.3 stuff

--- a/app/views/servers/index.html.erb
+++ b/app/views/servers/index.html.erb
@@ -2,5 +2,5 @@
 <h2>Authorized Email Servers</h2>
 <p>Servers listed here can push email to all mailing lists.</p>
 
-<%= render :partial => @servers %>
+<%= render @servers %>
 
