--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -3,7 +3,7 @@
 <br />
 <table class="subscribers">
 	<tbody id="subscribers">
-		<%= render :partial => @subscribers %>
+		<%= render @subscribers %>
 	</tbody>
 </table>
 
