--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,7 +7,7 @@
 		<th>Last Message</th>
 		<th>Message Count</th>
 	</tr>
-	<%= render :partial => @topics %>
+	<%= render @topics %>
 </table>
 <%= will_paginate @topics %>
 
