--- a/app/views/lists/_subscription.html.erb
+++ b/app/views/lists/_subscription.html.erb
@@ -1,4 +1,4 @@
 <p>
 	<%= link_to h(subscription.subscriber.name), subscriber_path(subscription.subscriber) %>
-	<%= link_to_remote "Remove", :method => :delete, :url => subscription_path(subscription) %>
+	<%= link_to_remote 'Remove', :method => :delete, :url => subscription_path(subscription), :html => { :class => 'small red'}  %>
 </p>
