--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,7 @@
 <p class="top-right-links">
 <% if current_user.admin? %>
       <%= link_to 'Edit List', edit_list_path(@list) %> |
-	  <%= link_to 'Delete List', list_path(@list), :method => :delete, :confirm => "Are you sure?" %> |
+	  <%= link_to 'Delete List', list_path(@list), :method => :delete, :confirm => "Are you sure?" %>
 <% else %>
 	<% if @list.subscribers.include?(current_user) %>
     	You are subscribed to this list
