Describe the short name field as 'Email Address'

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -4,7 +4,7 @@
 </p>
 
 <p>
-  <%= f.label :short_name %><br />
+  <%= f.label :short_name, 'Email Address' %><br />
   <%= f.text_field :short_name %>&nbsp;@<%= APP_CONFIG[:email_domain] %>
 </p>
 
