--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -8,7 +8,7 @@
 	</p>
 	<p>
 		<span class="sub-text">
-			<% if current_user.admin? %>
+			<% if admin? %>
 				(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 			<% end %>
 		<span class="sub-text">         
