--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -2,6 +2,13 @@
 <%= render :partial => 'search' %>
 <br />
 <table class="subscribers">
+  <thead>
+    <tr>
+      <th>&nbsp;</th>
+      <th>&nbsp;</th>
+      <th>Administrator</th>
+    </tr>
+  </thead>
 	<tbody id="subscribers">
 		<%= render @subscribers %>
 	</tbody>
