--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -21,13 +21,9 @@
 			<h3>Subscribers</h3>
       <ul id="subscriptions">
         <li>
-          <% form_for @subscription do |f| %>
-          	<%= f.hidden_field :list_id, :value => @list.id %>
-          	<%= f.select :subscriber_id, @available_subscribers.map {|s| [s.name, s.id] }, :include_blank => "Add a subscriber..." %>
-          	<%= f.submit "Add" %>
-          <% end %>
+          <%= render 'subscriptions/form' %>
         </li>
-        <%= render @list.subscriptions %>
+        <%= render @subscriptions %>
       </ul>
 		</td>
 		<% end %>
