--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-	<title><%= APP_CONFIG[:email_domain] %></title>
+	<title><%= ENV[:email_domain] %></title>
 	<%= stylesheet_link_tag "global" %>
     <%= javascript_include_tag :defaults %>
 </head>
